Fix build error: comment out incompatible pyx12 package

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,8 +27,8 @@ requests==2.31.0
 fhir.resources==7.1.0
 fhirclient==4.1.0
 
-# EDI X12
-pyx12==2.0.0
+# EDI X12 - temporarily removed due to Python 3 compatibility issues
+# pyx12==2.0.0
 
 # Machine Learning
 scikit-learn==1.4.0
